syntax = "proto3";
package sac.v1;
option go_package = "g.echo.tech/dev/sac/gen/sac/v1;sacv1";

import "google/api/annotations.proto";
import "google/protobuf/struct.proto";
import "google/protobuf/timestamp.proto";
import "sac/v1/agent.proto";
import "sac/v1/common.proto";

message SystemSetting {
  int64 id = 1;
  string key = 2;
  google.protobuf.Value value = 3;
  string description = 4;
  google.protobuf.Timestamp created_at = 5;
  google.protobuf.Timestamp updated_at = 6;
}

message UpdateSettingRequest {
  google.protobuf.Value value = 1;
  optional string description = 2;
}

message UserSetting {
  int64 id = 1;
  int64 user_id = 2;
  string key = 3;
  google.protobuf.Value value = 4;
  google.protobuf.Timestamp created_at = 5;
  google.protobuf.Timestamp updated_at = 6;
}

message SetUserSettingRequest {
  google.protobuf.Value value = 1;
}

message UpdateUserRoleRequest {
  string role = 1;
}

message AdminGroupBrief {
  int64 id = 1;
  string name = 2;
  string role = 3;
}

message AdminUser {
  int64 id = 1;
  string username = 2;
  string email = 3;
  string display_name = 4;
  string role = 5;
  int32 agent_count = 6;
  repeated AdminGroupBrief groups = 7;
  google.protobuf.Timestamp created_at = 8;
  google.protobuf.Timestamp updated_at = 9;
}

message AgentWithStatus {
  Agent agent = 1;
  string pod_status = 2;
  int32 restart_count = 3;
  string cpu_request = 4;
  string cpu_limit = 5;
  string memory_request = 6;
  string memory_limit = 7;
  string image = 8;
}

message UpdateAgentResourcesRequest {
  optional string cpu_request = 1;
  optional string cpu_limit = 2;
  optional string memory_request = 3;
  optional string memory_limit = 4;
}

message UpdateAgentImageRequest {
  string image = 1;
}

message BatchUpdateImageRequest {
  string image = 1;
}

message BatchUpdateError {
  string name = 1;
  string error = 2;
}

message BatchUpdateImageResponse {
  int32 total = 1;
  int32 updated = 2;
  int32 failed = 3;
  repeated BatchUpdateError errors = 4;
}

message AdminConversation {
  int64 id = 1;
  int64 user_id = 2;
  int64 agent_id = 3;
  string session_id = 4;
  string role = 5;
  string content = 6;
  google.protobuf.Timestamp timestamp = 7;
  string username = 8;
  string agent_name = 9;
}

message AdminConversationListResponse {
  repeated AdminConversation conversations = 1;
  int32 count = 2;
}

message AdminUserListResponse {
  repeated AdminUser users = 1;
}

message SystemSettingListResponse {
  repeated SystemSetting settings = 1;
}

message UserSettingListResponse {
  repeated UserSetting settings = 1;
}

message AgentWithStatusListResponse {
  repeated AgentWithStatus agents = 1;
}

message ResetPasswordRequest {
  string new_password = 1;
}

// Request messages for RPCs that need path params
message UpdateSettingByKeyRequest {
  string key = 1;
  google.protobuf.Value value = 2;
  optional string description = 3;
}

message UpdateUserRoleByIdRequest {
  int64 user_id = 1;
  string role = 2;
}

message GetUserSettingsRequest {
  int64 user_id = 1;
}

message SetUserSettingByIdRequest {
  int64 user_id = 1;
  string key = 2;
  google.protobuf.Value value = 3;
}

message DeleteUserSettingRequest {
  int64 user_id = 1;
  string key = 2;
}

message GetUserAgentsRequest {
  int64 user_id = 1;
}

message AdminAgentRequest {
  int64 user_id = 1;
  int64 agent_id = 2;
}

message UpdateAgentResourcesByIdRequest {
  int64 user_id = 1;
  int64 agent_id = 2;
  optional string cpu_request = 3;
  optional string cpu_limit = 4;
  optional string memory_request = 5;
  optional string memory_limit = 6;
}

message UpdateAgentImageByIdRequest {
  int64 user_id = 1;
  int64 agent_id = 2;
  string image = 3;
}

message ResetPasswordByIdRequest {
  int64 user_id = 1;
  string new_password = 2;
}

message AdminGetConversationsRequest {
  int64 user_id = 1;
  int64 agent_id = 2;
  string session_id = 3;
  int32 limit = 4;
  string before = 5;
  string start = 6;
  string end = 7;
}

service AdminService {
  // Settings
  rpc GetSettings(Empty) returns (SystemSettingListResponse) {
    option (google.api.http) = { get: "/api/admin/settings" };
  }
  rpc UpdateSetting(UpdateSettingByKeyRequest) returns (SuccessMessage) {
    option (google.api.http) = { put: "/api/admin/settings/{key}", body: "*" };
  }

  // Users
  rpc GetUsers(Empty) returns (AdminUserListResponse) {
    option (google.api.http) = { get: "/api/admin/users" };
  }
  rpc UpdateUserRole(UpdateUserRoleByIdRequest) returns (SuccessMessage) {
    option (google.api.http) = { put: "/api/admin/users/{user_id}/role", body: "*" };
  }
  rpc GetUserSettings(GetUserSettingsRequest) returns (UserSettingListResponse) {
    option (google.api.http) = { get: "/api/admin/users/{user_id}/settings" };
  }
  rpc SetUserSetting(SetUserSettingByIdRequest) returns (SuccessMessage) {
    option (google.api.http) = { put: "/api/admin/users/{user_id}/settings/{key}", body: "*" };
  }
  rpc DeleteUserSetting(DeleteUserSettingRequest) returns (SuccessMessage) {
    option (google.api.http) = { delete: "/api/admin/users/{user_id}/settings/{key}" };
  }
  rpc GetUserAgents(GetUserAgentsRequest) returns (AgentWithStatusListResponse) {
    option (google.api.http) = { get: "/api/admin/users/{user_id}/agents" };
  }
  rpc DeleteUserAgent(AdminAgentRequest) returns (SuccessMessage) {
    option (google.api.http) = { delete: "/api/admin/users/{user_id}/agents/{agent_id}" };
  }
  rpc RestartUserAgent(AdminAgentRequest) returns (SuccessMessage) {
    option (google.api.http) = { post: "/api/admin/users/{user_id}/agents/{agent_id}/restart" };
  }
  rpc UpdateAgentResources(UpdateAgentResourcesByIdRequest) returns (SuccessMessage) {
    option (google.api.http) = { put: "/api/admin/users/{user_id}/agents/{agent_id}/resources", body: "*" };
  }
  rpc UpdateAgentImage(UpdateAgentImageByIdRequest) returns (SuccessMessage) {
    option (google.api.http) = { put: "/api/admin/users/{user_id}/agents/{agent_id}/image", body: "*" };
  }
  rpc BatchUpdateImage(BatchUpdateImageRequest) returns (BatchUpdateImageResponse) {
    option (google.api.http) = { post: "/api/admin/agents/batch-update-image", body: "*" };
  }
  rpc ResetUserPassword(ResetPasswordByIdRequest) returns (SuccessMessage) {
    option (google.api.http) = { put: "/api/admin/users/{user_id}/password", body: "*" };
  }

  // Conversations
  rpc GetConversations(AdminGetConversationsRequest) returns (AdminConversationListResponse) {
    option (google.api.http) = { get: "/api/admin/conversations" };
  }

  // Maintenance
  rpc TriggerMaintenance(Empty) returns (SuccessMessage) {
    option (google.api.http) = { post: "/api/admin/maintenance/trigger" };
  }
}
